# wagtailextraicons

./: .gitignore  MANIFEST.in  README.md  package.json  requirements.txt  setup.cfg  setup.py  webpack.config.js
docs/: icons.md
wagtailextraicons/: __init__.py  apps.py  wagtail_hooks.py
wagtailextraicons/static/wagtailextraicons/css/: main.css
wagtailextraicons/static/wagtailextraicons/fonts/: extraicons.2d86125174462b57ee34e53e44c94c66.eot
wagtailextraicons/static_src/wagtailextraicons/scss/: main.scss
