[metadata]
description-file = README.md
name = wagtailextraicons
description = Add extra icons to your Wagtail project.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Costigan (Octave)
author_email = sam@octave.nz
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
include_package_data = true
packages = find:
