[metadata]
name = wagtailextraicons
version = 3.0.0
description = Add extra icons to your Wagtail project.
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/octavenz/wagtailextraicons
author = Sam Costigan (Octave)
author_email = support@octave.nz
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Framework :: Wagtail :: 3
    Framework :: Wagtail :: 4
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
include_package_data = true
packages = find:
install_requires =
    wagtail>=3.0
